src/wmcads/patterns/hub-page-banner/_hub-page-banner.scss
.wmcads-hub-page-banner {
  position: relative;
  color: $white;
  background-color: get-color(primary);

  .wmcads-hub-page-banner__svg-background {
    fill: get-color(primary);
  }

  &__copy {
    max-width: 100%;

    h1 {
      margin-bottom: $size-md;
    }

    & > * {
      color: $white;
    }
  }

  &__logos {
    display: flex;

    svg {
      width: 3rem;
      fill: $white;
    }

    img {
      max-width: 50%;
      max-height: 75px;
    }

    svg,
    img {
      &:not(:last-child) {
        margin-right: $size-lg;
      }
    }
  }

  &__content {
    display: flex;
    padding: $size-lg 0;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
  }

  @media screen and (min-width: $breakpoint-md) {

    min-height: 250px;

    &__content {
      width: 50%;
    }

    &__image {
      position: absolute;
      z-index: 0;
      top: 0;
      right: 0;
      width: 50%;
      height: 100%;
      overflow: hidden;
      background-image: url("/img/curzon-street.png/");
      background-repeat: no-repeat;
      background-position: 50% 50%;
      background-size: cover;
    }

    &__svg-background {
      position: absolute;
      z-index: 2;
      top: 0;
      left: -3px;
      height: 100%;
    }
  }

  // only for IE 11
  @media all and (-ms-high-contrast: none) {
    .wmcads-hub-page-banner__svg-background {
      left: calc(-50% + 30px);
    }
  }
}

